deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybatis-sample
  labels:
    app: mybatis-sample
spec:
  selector:
    matchLabels:
      app: mybatis-sample
  replicas: 1
  template:
    metadata:
      name: mybatis-sample
      labels:
        app: mybatis-sample
    spec:
      containers:
        - name: mybatis-sample
          image: docker.io/hiondal/mybatis-sample:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: mybatis-sample
spec:
  type: ClusterIP
  selector:
    app: mybatis-sample
  ports:
    - name: mybatis-sample
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mybatis-sample
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: mybatis-sample-u00.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: mybatis-sample
                port: 
                  number: 8080
